# tdl_sdk

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README_INTERNAL.md  VERSION.cmake  build.sh  build_config.yaml  build_tdl_sdk.sh  build_v2.sh  clang-format.sh  config.h.in  env.sh  gen_rls_info.py  parse_build_config.py  rls_info.txt  run_check.sh
bm1688/: CMakeLists.txt  README.md  native_arm.cmake
bm1688/python/: CMakeLists.txt  native_arm.cmake
doc/: 0--table_of_contents.md  0-introduction.md  1-quick_start.md  2-core.md  3-1-frservice.md  3-2-objservice.md  3-service.md  4-using_custom_ai_with_aisdk.md  4.1-using_utils_with_custom_ai.md  4.2-using_service_with_custom_ai.md  CMakeLists.txt  Doxyfile.in  appendix01-vpss_helper.md  appendix02-using_service_with_custom_ai.md  appendix02-yolov5_model_deploy_helper.md  appendix03-yolov6_model_deploy_helper.md  appendix03-yolov8_model_deploy_helper.md  appendix04-yolov7_model_deploy_helper.md  appendix05-yolov8_model_deploy_helper.md  appendix06-yolox_model_dploy_helper.md  appendix07-ppyoloe_model_deploy_helper.md  cvitek_ai_quick_start_guide.md
doc/release_doc/: appendix03-yolov8_model_deploy_helper.md
evaluation/: CMakeLists.txt  eval_all.cpp  eval_app_capture.cpp  eval_app_pipeline.cpp  eval_audio_asr.cpp  eval_audio_vad.cpp  eval_bin_audio.cpp  eval_classification.cpp  eval_clip_pipeline.cpp  eval_detection.cpp  eval_face_attribute.cpp  eval_face_detection.cpp  eval_face_feature.cpp  eval_hand_keypoint_cls.cpp  eval_info.json  eval_instance_segmentation.cpp  eval_keypoint.cpp  eval_lane_detection.cpp  eval_license_plate_recognition.cpp  eval_object_detection.cpp  eval_pose_yolov8.cpp  eval_semantic_segmentation.cpp  eval_sot.cpp  eval_topformer_seg_motion_mask.cpp  eval_tracking.cpp  evaluator.cpp  evaluator.hpp
lib/: CMakeLists.txt  cvi_md.cpp  cvi_md.h
lib/cvi_draw_rect/: CMakeLists.txt  cvi_draw_rect.h
lib/cvi_md/: CMakeLists.txt  cvi_md.h
lib/cvi_preprocess/: CMakeLists.txt  cvi_bmcv.h
lib/draw_rect/: CMakeLists.txt  cvi_draw_rect.cpp  cvi_draw_rect.h
lib/md/: CMakeLists.txt  cvi_md.cpp  cvi_md.h
lib/preprocess/: CMakeLists.txt  cvi_bmcv.cpp
lib/sample/: CMakeLists.txt  Makefile  sample_lib_cvimd.cpp  sample_lib_draw_rect.cpp  sample_lib_preprocess.cpp  test_img_cvimd.cpp
modules/: CMakeLists.txt  cv183x_facelib.cpp  cviai.cpp  cviai_types_free.cpp  version.hpp.in
modules/app/: CMakeLists.txt  Makefile  cvi_tdl_app.c  cviai_app.c
modules/core/: CMakeLists.txt  core.cpp  core.hpp  cvi_tdl_core.cpp  cvi_tdl_core_internal.hpp  cvi_tdl_core_noopencv.cpp  cvi_tdl_core_phobos.cpp  cvi_tdl_custom.cpp  cvi_tdl_types_mem.cpp  cvi_tdl_utils.cpp  cviai_core.cpp  cviai_core_internal.hpp  cviai_core_phobos.cpp  cviai_custom.cpp  cviai_media.cpp  cviai_mmf.cpp  cviai_rescale_bbox.cpp  cviai_types_free.cpp  cviai_types_mem.cpp  cviai_utils.cpp  vpss_engine.cpp  vpss_engine.hpp
modules/cvi_face_attribute/: face_attribute.cpp  face_attribute.h
modules/cvi_face_quality/: face_quality.cpp  face_quality.h
modules/cvi_feature_matching/: cached_repo.hpp  face_repo.cpp  face_repo.h
modules/cvi_liveness/: liveness.cpp  liveness.h  template_matching.cpp  template_matching.h
modules/cvi_retina_face/: anchor_generator.cpp  anchor_generator.h  retina_face.cpp  retina_face.h
modules/cvi_tdl_app/: Makefile
modules/cvi_tdl_evaluation/: CMakeLists.txt  cvi_tdl_media.cpp
modules/cvi_thermal_face_detect/: thermal_face.cpp  thermal_face.h
modules/cvi_utils/: cvi_face_utils.cpp
modules/cvi_yolove3/: run_yolo.cpp  run_yolo.h  yolo.cpp  yolo.h
modules/cviai_trace/: CMakeLists.txt  cviai_trace.cpp  cviai_trace.hpp
modules/eval/: CMakeLists.txt  eval_blip_vqa.cpp  eval_cls.cpp  eval_det.cpp  eval_image_classification.cpp  eval_isp_image_classification.cpp  eval_lpr_pipe.cpp  eval_lstr.cpp  eval_pose_dataset.cpp  eval_raw_image_classification.cpp  eval_yolov10.cpp  regression_info.cpp
modules/evaluation/: CMakeLists.txt  cviai_evaluation.cpp  cviai_media.cpp  cviai_run_capture.cpp  cviai_run_dataset.cpp  cviai_run_face_cap.cpp  img_process.cpp  mapi.hpp  run_hand_dataset.cpp  test_md.cpp  (+14 more)
regression/: CMakeLists.txt  README.md  cvi_tdl_model_id.hpp  cvi_tdl_test.cpp  cvi_tdl_test.hpp  cviai_test.cpp  cviai_test.hpp  daily_regression.sh  daily_regression_v2.sh  generate_regression_info.cpp  od_utils.c  od_utils.h  raii.cpp  raii.hpp  reg_blas.c  reg_daily_a2_lpd.cpp  reg_daily_a2_scrfd.cpp  reg_daily_alphapose.cpp  reg_daily_cls.cpp  reg_daily_core.cpp  reg_daily_det.cpp  reg_daily_es_classification.cpp  reg_daily_eye_classification.cpp  reg_daily_face_attribute_cls.cpp  reg_daily_face_cap.cpp  reg_daily_face_feature_bm.cpp  reg_daily_fall.cpp  reg_daily_fdmask.cpp  reg_daily_feature.cpp  reg_daily_feature_matching.cpp  reg_daily_fl.cpp  reg_daily_fq.cpp  reg_daily_fr.cpp  reg_daily_hand.cpp  reg_daily_handcls.cpp  reg_daily_handdet.cpp  reg_daily_hardhat_bm.cpp  reg_daily_hardhat_det.cpp  reg_daily_hatd.cpp  reg_daily_hd.cpp  (+71 more)
sample/: CMakeLists.txt  Makefile  README.md  draw_utils.c  draw_utils.h  middleware_utils.c  middleware_utils.h  sample_adas.c  sample_app_face_capture.c  sample_app_face_capture_p.c  sample_app_face_mask_detection.c  sample_app_face_recognition.c  sample_app_hardhat_detection.c  sample_app_person_capture.c  sample_aud_cls_read.c  sample_aud_cry.c  sample_aud_esc.c  sample_aud_order.cpp  sample_aud_soundcmd.c  sample_audio_cls.c  sample_baby_aud_det.c  sample_blip_cap.c  sample_blip_itm.c  sample_blip_vqa.c  sample_cap_face.c  sample_clip.c  sample_clip_image.c  sample_clip_pipeline.c  sample_clip_text.c  sample_clip_text.cpp  sample_digital_tracking.c  sample_face_quality.c  sample_face_register.c  sample_fd.c  sample_fd_fr.c  sample_get_dB.c  sample_hand_detect.c  sample_hand_keypoint.c  sample_img_classification.cpp  sample_img_det.c  (+103 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt
tool/: CMakeLists.txt  README.md  mot_auto_tuning.cpp  mot_dump_data.cpp  sample_mot_utils.c  sample_mot_utils.h  sample_read_mot.c  visual_app_face_capture.cpp
(+1687 files in other folders)
